--- a/assets/css/cookies-enabler.css
+++ b/assets/css/cookies-enabler.css
@@ -27,6 +27,7 @@ p{
     padding: 1em;
     color: var(--sec-color);
     font-size: 1em;
+    z-index: 99;
 }
 
 .ce-accept, .ce-dismiss, .ce-disable{
